tests/snapshots/test_rls_translation__rls_all_policy_translation.snap
---
source: tests/test_rls_translation.rs
expression: translated_sql
---
CREATE TABLE IF NOT EXISTS rls_audit (id INTEGER PRIMARY KEY AUTOINCREMENT, table_name TEXT NOT NULL, violation_type TEXT NOT NULL, row_identifier TEXT NOT NULL, policy_name TEXT, detected_at TEXT NOT NULL, severity TEXT NOT NULL, details TEXT, reported_at TEXT) STRICT
CREATE TABLE documents_rls (id BLOB PRIMARY KEY DEFAULT (uuidv7()) CHECK (length(id) = 16) NOT NULL, owner_id BLOB NOT NULL CHECK (length(owner_id) = 16), title TEXT NOT NULL, content TEXT) STRICT
CREATE VIEW documents AS SELECT id, owner_id, title, content FROM documents_rls WHERE (owner_id = current_app_user())
CREATE TRIGGER documents_insert_trigger INSTEAD OF INSERT ON documents FOR EACH ROW BEGIN SELECT RAISE(ABORT, 'new row violates row-level security policy') WHERE NOT ((NEW.owner_id = current_app_user())); INSERT INTO documents_rls (id, owner_id, title, content) VALUES (NEW.id, NEW.owner_id, NEW.title, NEW.content); END
CREATE TRIGGER documents_update_trigger INSTEAD OF UPDATE ON documents FOR EACH ROW BEGIN SELECT RAISE(ABORT, 'new row violates row-level security policy') WHERE ((OLD.owner_id = current_app_user())) AND NOT ((NEW.owner_id = current_app_user())); UPDATE documents_rls SET id = NEW.id, owner_id = NEW.owner_id, title = NEW.title, content = NEW.content WHERE (id = OLD.id) AND ((OLD.owner_id = current_app_user())); END
CREATE TRIGGER documents_delete_trigger INSTEAD OF DELETE ON documents FOR EACH ROW BEGIN DELETE FROM documents_rls WHERE (id = OLD.id) AND ((OLD.owner_id = current_app_user())); END
CREATE TRIGGER documents_rls_rls_monitor_insert AFTER INSERT ON documents_rls FOR EACH ROW BEGIN INSERT INTO rls_audit (table_name, violation_type, row_identifier, policy_name, detected_at, severity, details, reported_at) SELECT 'documents', 'rls_policy_violation', 'id=' || quote(NEW.id), 'INSERT policy', datetime('now'), 'warning', 'Row inserted into backing table but not visible through RLS view', NULL WHERE NOT (EXISTS (SELECT 1 FROM documents WHERE documents.id = NEW.id)); END
CREATE TRIGGER documents_rls_rls_monitor_update AFTER UPDATE ON documents_rls FOR EACH ROW BEGIN INSERT INTO rls_audit (table_name, violation_type, row_identifier, policy_name, detected_at, severity, details, reported_at) SELECT 'documents', 'rls_policy_violation', 'id=' || quote(NEW.id), 'UPDATE policy', datetime('now'), 'warning', 'Row updated in backing table but not visible through RLS view', NULL WHERE NOT (EXISTS (SELECT 1 FROM documents WHERE documents.id = NEW.id)); END
CREATE VIEW documents_rls_violations AS SELECT id, owner_id, title, content FROM documents_rls WHERE NOT EXISTS (SELECT 1 FROM documents WHERE documents_rls.id = documents.id)
